syntax = "proto3";

package cnc;

/*
Non-machine metrics:
- e.g. player load times.


Note that we don't want to store type information in the value.
- Preferrable to just 

May make sense to group things be:
- Resource

*/

message MetricStreamProto {
    fixed64 resource_key = 1;
    MetricResource resource = 2;
}

// TODO: Split up the concept of resource and metric descriptor 
message MetricResource {
    fixed64 machine_id = 1;
    MetricKind kind = 2; 
    string axis_id = 3;
    uint32 value_index = 4;
}

enum MetricKind {
    UNKNOWN = 0;
    MACHINE_AXIS_VALUE = 1;
}

message MetricSample {
    fixed64 resource_key = 1;

    // Time at which this measurement was made (in microseconds since unix epoch)
    fixed64 timestamp = 2;

    oneof data {
        float float_value = 3;
    }
}